# MAGEO

./: .example_env  .gitignore  MAGEO_开发文档.md  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  base.py  editor_agent.py  evaluation_agent.py  planner_agent.py  preference_agent.py  qa_agent.py  query_rewrite.py
config/: base.py  config.yaml.example
debug/: log.py
docs/: paper_alignment.md  test_phase.md
evaluation/: __init__.py  candidate_selector.py  metrics.py  simulated_evaluator.py
memory/: __init__.py  base.py  memory_bank.py  schema.py  sliding_window.py
model/: base.py  litellm_model.py  schema.py
pipeline/: __init__.py  example_geo_optimize.py  geo_optimizer.py  interactive_optimize.py
prompt/: __init__.py  prompt.py
scripts/: batch_optimize.py  batch_optimize_sequential.py  batch_optimize_v2.py  convert_excel_to_json.py
test/: test_candidate_selector_unit.py  test_config_base_unit.py  test_memory_bank.py  test_qa.py  test_query_rewrite.py
tool/: __init__.py  web_search.py
